# MJPEGOnWiiU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  pir.h
ext/src/dmae/: dmae.c  dmae.h
src/: app.c  app.h  common.h  log.h  main.c  monitor.c  monitor.h  screen.c  screen.h  tmp_hacks.c
src/decoder/: avi-mjpeg.c  avi-mjpeg.h  avi.h
